@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.8 2018/07/28 14:40:48 brook Exp $
+# $NetBSD: Makefile,v 1.9 2019/07/31 19:43:12 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/httpRequest/
-COMMENT=	Implements the GET, POST and multipart POST request
-LICENSE=	gnu-gpl-v2
+COMMENT=	Basic HTTP request
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	httpRequest
-R_PKGVER=	0.0.9
+R_PKGVER=	0.0.10
+
+USE_LANGUAGES=	# none
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
