@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.5 2015/11/03 23:33:28 agc Exp $
+$NetBSD: distinfo,v 1.6 2019/07/31 19:43:12 brook Exp $
 
-SHA1 (R/httpRequest_0.0.9.tar.gz) = 8da0cd4adf61e11435a3f0003ebb1b72a82ca8ad
-RMD160 (R/httpRequest_0.0.9.tar.gz) = 8ce3914ea252eb35d0737092f917db2aa4ae9a47
-SHA512 (R/httpRequest_0.0.9.tar.gz) = 8d6762977e04cf94b3ff54346cbce54cd140c9eb7a413472848d0af657ff3c6aed6df80a2f7a10aa618766ae8b1321d9d6a737cc91953c481db4b4cab3495d7f
-Size (R/httpRequest_0.0.9.tar.gz) = 4449 bytes
+SHA1 (R/httpRequest_0.0.10.tar.gz) = 6f870e86f3e2ce7e54e26b89bff94696a4df6d96
+RMD160 (R/httpRequest_0.0.10.tar.gz) = c8569904b352a20f779056057ca23c5fd40c8228
+SHA512 (R/httpRequest_0.0.10.tar.gz) = c38f1f85e8a9fb741978980094ef53130610e98d6a6c1266e5771a9e353669fb05c6766f80f00442badb2e6f03343a9ec6a61f8a88e6c6835199b34a10bc30ae
+Size (R/httpRequest_0.0.10.tar.gz) = 4605 bytes
