@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3180 2019/07/31 19:41:56 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3181 2019/07/31 19:43:12 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5137,3 +5137,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-gstat to 2.0.2 [brook 2019-07-31]
 	Updated math/R-gtable to 0.3.0 [brook 2019-07-31]
 	Updated math/R-gtools to 3.8.1 [brook 2019-07-31]
+	Updated math/R-httpRequest to 0.0.10 [brook 2019-07-31]
